--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+Hi  welcome to smooth running
+
+
+
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create 
